<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oss_license_title"
        android:textAllCaps="false"
        android:layout_marginVertical="12dp"/>

    <ImageView
        android:id="@+id/image_camera"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginBottom="12dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/detail_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_category"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:lines="8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_menu_utama"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:cornerRadius="12sp"
        android:padding="12sp"/>

</LinearLayout>